# cookiecutter-pypackage

./: cookiecutter.json
docs/: conf.py
{{cookiecutter.project_slug}}/: Makefile  README.rst  pyproject.toml
{{cookiecutter.project_slug}}/.github/workflows/: main.yml
{{cookiecutter.project_slug}}/docs/: conf.py
{{cookiecutter.project_slug}}/tests/: test_{{cookiecutter.project_slug}}.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: cli.py
